# OSM2GMNS

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  OSM2GMNS.py  README.md  README.rst  config.h.in  create_python_package.sh  osm2gmns.ipynb  osm2gmns_api.cpp  osm2gmns_lib.cpp  osm2gmns_main.cpp  osm2gmns_quickstart.ipynb  osm2gmns_quickstart_Atlanta.ipynb  osm2gmns_quickstart_Gila_County_AZ.ipynb  osm2gmns_quickstart_Gilbert.ipynb  osm2gmns_quickstart_Gilbert_AZ.ipynb  osm2gmns_quickstart_Miami_AZ.ipynb  osm2gmns_quickstart_for_Dubai.ipynb  osm2gmns_test.cpp  pyproject.toml  requirements.txt  setup.py  test_relation_id_finder.py
.github/: CODEOWNERS
.github/workflows/: build-linux.yml  build-macos-arm.yml  build-macos-mchip.yml  build-macos.yml  build-python-package.yml  build-wheels-push.yml  build-wheels.yml  build-windows.yml  python-package.yml
dev/: CMakeLists.txt  osm2gmns_dev.cpp  osm2gmns_dev.py
doc/: OSM2GMNS_v3.3.doc  OSM2GMNS_v3.3.docx  readme.md  ~$M2GMNS_v3.3.doc  ~$readme.md
doc/QGIS_nexta4GMNS/: readme.md  ~$readme.md
docs/source/: acknowledgement.rst  case-net.rst  conf.py  functions.rst  get-osm-data.rst  gmns.rst  index.rst  installation.rst  mrm.rst  public-api.rst  quick-start.rst  requirements.txt  sample-net.rst
docs/source/_build/html/: .buildinfo  acknowledge.html  acknowledgement.html  case-net.html  genindex.html  gmns copy.html  gmns.html  index copy.html  index.html  installation copy.html  installation.html  modules.html  objects.inv  quick-start.html  sample-net.html  search.html  searchindex.js
docs/source/_build/html/.doctrees/: acknowledge.doctree  acknowledgement.doctree  case-net.doctree  environment.pickle  gmns copy.doctree  gmns.doctree  index copy.doctree  index.doctree  installation copy.doctree  installation.doctree  modules.doctree  quick-start.doctree  sample-net.doctree
docs/source/_build/html/_sources/: acknowledge.rst.txt  acknowledgement.rst.txt  case-net.rst.txt  gmns copy.rst.txt  index copy.rst.txt  index.rst.txt  installation copy.rst.txt  modules.rst.txt  quick-start.rst.txt
examples/Arizona State University, Tempe Campus/: asu.osm  link.csv  node.csv
osm2gmns/: __init__.py  activity.py  autoconintd.py  autoconm.py  check_args.py  classes.py  combine_links.py  complex_intersection.py  consolidate_intersections.py  coordconvertor.py  downloader.py  enrich_net_info.py  file.py  fileformat_pb2.py  movement.py  network.py  osm2gmns.py  osmformat_pb2.py  pois.py  readfile.py  readfile_mp.py  settings.py  simplification.py  util.py  visualization.py  wayfilters.py  writefile.py
osm2gmns/func_lib/: __init__.py  extract_relation_id.py
osm2gmns/io/: downloader.py  load_from_csv.py  output_mrnet.py  read_from_osm.py  readfile_mp.py  util_io.py  writefile.py
osm2gmns/movement/: auto_connection.py  autoconintd.py  autoconm.py  exp_auto_connection.py  exp_connection_from_turns.py  exp_generate_movements.py  generate_movements.py  generate_movements_old.py  util_mvmt.py
osm2gmns/multiresolutionnet/: build_mrnet.py  netgen.py
osm2gmns/networkclass/: basenet.py  macronet.py  mesonet.py  micronet.py
osm2gmns/osmnet/: build_net.py  check_args.py  combine_links.py  complex_intersection.py  enrich_net_info.py  osmclasses.py  pois.py  visualization.py  wayfilters.py
osm2gmns/utils/: util.py  util_coord.py  util_geo.py
python/: __init__.py  osm2gmns.py
sample networks/Arizona State University, Tempe Campus/: asu-net.7z  poi.csv
scripts/: main.py  setup.py
src/: CMakeLists.txt  buildnet.cpp  buildnet.h  config.h  constants.h  functions.cpp  functions.h  io.cpp  io.h  networks.cpp  networks.h  osmconfig.cpp  osmconfig.h  osmnetwork.cpp  osmnetwork.h  util_geo.cpp  util_geo.h  utils.cpp  utils.h
test/: test_og.py  ~$m2gmns_0_0_2测试汇总.docx
test_dev/: CMakeLists.txt  osm2gmns_dev.cpp  osm2gmns_test_dev.cpp
test_dev/maps/imperial/: map.osm.pbf
test_dev/maps/yuba/: map.osm.pbf
tests/: __init__.py  test_relation_id_finder.py
user_guide/: README.md
user_guide/osm2gmns_illustration_code/: NEXTA_Settings.ini  main_v2.py
user_guide/osm2gmns_illustration_code/network/: map.pbf
